Added ajax to send password to php file.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 Incorrect username or password.
             </div>
             <h2>Please authenticate</h2>
-            <form method='get' class="form-inline" action="">
+            <form method='get' class="form-inline" action="validateIdentity()">
                     <div class="form-group">
                       <label for="user">User</label>
                       <input type="text" class="form-control" id="user" placeholder="test" name="user">
